Bug 575693 - Download Manager and Page Info no longer have an accessible tree, r=davidb, marcoz, sr=roc