accessible/src/msaa/nsRootAccessibleWrap.h
@@ -43,15 +43,8 @@
 #ifndef _nsRootAccessibleWrap_H_
 #define _nsRootAccessibleWrap_H_
 
-#include "nsCOMPtr.h"
 #include "nsRootAccessible.h"
 
-class nsRootAccessibleWrap: public nsRootAccessible
-{
-public:
-  nsRootAccessibleWrap(nsIDocument *aDocument, nsIContent *aRootContent,
-                       nsIWeakReference *aShell);
-  virtual ~nsRootAccessibleWrap();
-};
+typedef class nsRootAccessible nsRootAccessibleWrap;
 
 #endif
