widget/src/windows/nsWindow.cpp
@@ -189,6 +189,7 @@
 #if defined(ACCESSIBILITY)
 #include "oleidl.h"
 #include <winuser.h>
+#include "nsIAccessibleDocument.h"
 #if !defined(WINABLEAPI)
 #include <winable.h>
 #endif // !defined(WINABLEAPI)
@@ -7355,6 +7356,44 @@ nsWindow::OnIMESelectionChange(void)
 #endif //NS_ENABLE_TSF
 
 #ifdef ACCESSIBILITY
+
+#ifdef DEBUG_WMGETOBJECT
+#define NS_LOG_WMGETOBJECT_WNDACC(aWnd)                                        \
+  nsAccessible* acc = aWnd ?                                                   \
+    aWnd->DispatchAccessibleEvent(NS_GETACCESSIBLE) : nsnull;                  \
+  printf("     acc: %p", acc);                                                 \
+  if (acc) {                                                                   \
+    nsAutoString name;                                                         \
+    acc->GetName(name);                                                        \
+    printf(", accname: %s", NS_ConvertUTF16toUTF8(name).get());                \
+    nsCOMPtr<nsIAccessibleDocument> doc = do_QueryObject(acc);                 \
+    void *hwnd = nsnull;                                                       \
+    doc->GetWindowHandle(&hwnd);                                               \
+    printf(", acc hwnd: %d", hwnd);                                            \
+  }
+
+#define NS_LOG_WMGETOBJECT_THISWND                                             \
+{                                                                              \
+  printf("\n*******Get Doc Accessible*******\nOrig Window: ");                 \
+  printf("\n  {\n     HWND: %d, parent HWND: %d, wndobj: %p, content type: %d,\n",\
+         mWnd, ::GetParent(mWnd), this, mContentType);                         \
+  NS_LOG_WMGETOBJECT_WNDACC(this)                                              \
+  printf("\n  }\n");                                                           \
+}
+
+#define NS_LOG_WMGETOBJECT_WND(aMsg, aHwnd)                                    \
+{                                                                              \
+  nsWindow* wnd = GetNSWindowPtr(aHwnd);                                       \
+  printf("Get " aMsg ":\n  {\n     HWND: %d, parent HWND: %d, wndobj: %p,\n",  \
+         aHwnd, ::GetParent(aHwnd), wnd);                                      \
+  NS_LOG_WMGETOBJECT_WNDACC(wnd);                                              \
+  printf("\n }\n");                                                            \
+}
+#else
+#define NS_LOG_WMGETOBJECT_THISWND
+#define NS_LOG_WMGETOBJECT_WND(aMsg, aHwnd)
+#endif // DEBUG_WMGETOBJECT
+
 nsAccessible*
 nsWindow::GetRootAccessible()
 {
@@ -7388,15 +7427,21 @@ nsWindow::GetRootAccessible()
     return nsnull;
   }
 
-  // If accessibility is turned on, we create this even before it is requested
-  // when the window gets focused. We need it to be created early so it can 
-  // generate accessibility events right away
-  nsWindow* accessibleWindow = nsnull;
+  NS_LOG_WMGETOBJECT_THISWND
+
   if (mContentType != eContentTypeInherit) {
     // We're on a MozillaContentWindowClass or MozillaUIWindowClass window.
     // Search for the correct visible child window to get an accessible 
-    // document from. Make sure to use an active child window
+    // document from. Make sure to use an active child window. If this window
+    // doesn't have child windows then return an accessible for it.
     HWND accessibleWnd = ::GetTopWindow(mWnd);
+    NS_LOG_WMGETOBJECT_WND("Top Window", accessibleWnd);
+    if (!accessibleWnd) {
+      NS_LOG_WMGETOBJECT_WND("This Window", mWnd);
+      return DispatchAccessibleEvent(NS_GETACCESSIBLE);
+    }
+
+    nsWindow* accessibleWindow = nsnull;
     while (accessibleWnd) {
       // Loop through windows and find the first one with accessibility info
       accessibleWindow = GetNSWindowPtr(accessibleWnd);
@@ -7409,10 +7454,12 @@ nsWindow::GetRootAccessible()
         }
       }
       accessibleWnd = ::GetNextWindow(accessibleWnd, GW_HWNDNEXT);
+      NS_LOG_WMGETOBJECT_WND("Next Window", accessibleWnd);
     }
     return nsnull;
   }
 
+  NS_LOG_WMGETOBJECT_WND("This Window", mWnd);
   return DispatchAccessibleEvent(NS_GETACCESSIBLE);
 }
 
